.k8s/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-planetexpress-__CI_ENVIRONMENT_SLUG__
  labels:
    app: app-planetexpress
    ref: app-__CI_ENVIRONMENT_SLUG__
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
    prometheus.io/scheme: "http"
    prometheus.io/path: "/metrics"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: app-planetexpress
    ref: app-__CI_ENVIRONMENT_SLUG__
